# DotNetAnywhere

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  dna.managed.sln
cmake/: FindLibX.cmake  Findlibm.cmake  dotnet.cmake  polyfills.cmake
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/Snake/: CMakeLists.txt  Snake.csproj
src/examples/Snake/Properties/: AssemblyInfo.cs
src/examples/mini-demo-dna/: CMakeLists.txt
src/examples/mini-demo-dna/HelloWorld/: CMakeLists.txt  HelloWorld.csproj
src/examples/mini-demo-dna/mini-demo-dna/: CMakeLists.txt  main.c
src/libs/: CMakeLists.txt
src/libs/CustomDevice/: CustomDevice.csproj  DeviceGraphics.cs  KeyPad.cs  Utils.cs  WindowsScreen.cs
src/libs/CustomDevice/Properties/: AssemblyInfo.cs
src/libs/System/: System.csproj
src/libs/System.Core/: System.Core.csproj
src/libs/System.Drawing/: System.Drawing.csproj
src/libs/System.Drawing/System.Drawing/: LibIGraph.cs
src/libs/corlib/: corlib.csproj
src/libs/corlib/System/: MulticastDelegate.cs  OperatingSystem.cs  String.cs
src/libs/corlib/System.Runtime/: Versioning.cs
src/libs/corlib/System.Text/: Encoding.cs
src/runtime/: CMakeLists.txt
src/runtime/dna/: CMakeLists.txt
src/runtime/dna/exe/: CMakeLists.txt
src/runtime/dna/exe/src/: dna.c
src/runtime/dna/lib/: CMakeLists.txt
src/runtime/dna/lib/impl/: CLIFile.c  Delegate.c  Finalizer.c  Generics.c  Heap.c  InternalCall.c  JIT.c  JIT_Execute.c  MetaData.c  MetaData_Fill.c  MetaData_Search.c  MethodState.c  PInvoke.c  RVA.c  Sys.c  System.Array.c  System.Char.c  System.Console.c  System.DateTime.c  System.Diagnostics.Debugger.c  System.Enum.c  System.Environment.c  System.GC.c  System.IO.FileInternal.c  System.Math.c  System.Net.Dns.c  System.Net.Sockets.Socket.c  System.Object.c  System.Runtime.CompilerServices.RuntimeHelpers.c  System.RuntimeType.c  System.String.c  System.Threading.Interlocked.c  System.Threading.Monitor.c  System.Threading.Thread.c  System.Type.c  System.ValueType.c  System.WeakReference.c  Thread.c  Type.c
src/runtime/dna/lib/impl/asm/: label_ops.amd64.asm
src/runtime/dna/lib/include/public/dna/runtime/: Config.h
src/runtime/dna/lib/include/public/dna/runtime/clr/: Delegate.h  Finalizer.h  Generics.h  Heap.h  InternalCall.h  MethodState.h  Sys.h  Thread.h  Type.h
src/runtime/dna/lib/include/public/dna/runtime/clr/cli/: CLIFile.h  MetaData.h  MetaDataTables.h  RVA.h
src/runtime/dna/lib/include/public/dna/runtime/clr/jit/: CIL_OpCodes.h  EvalStack.h  JIT.h  JIT_OpCodes.h
src/runtime/dna/lib/include/public/dna/runtime/clr/pinvoke/: PInvoke.h  PInvoke_TypeDef.h
src/runtime/dna/lib/include/public/dna/runtime/clr/pla/: Compat.h  Types.h
src/runtime/dna/lib/include/public/dna/runtime/fx/system/: System.Array.h  System.Char.CaseConversion.h  System.Char.UC_IndexRuns.h  System.Char.h  System.Console.h  System.DateTime.h  System.Diagnostics.Debugger.h  System.Enum.h  System.Environment.h  System.GC.h  System.IO.FileInternal.h  System.Math.h  System.Object.h  System.Runtime.CompilerServices.RuntimeHelpers.h  System.RuntimeType.h  System.String.h  System.Threading.Interlocked.h  System.Threading.Monitor.h  System.Threading.Thread.h  System.Type.h  System.ValueType.h  System.WeakReference.h
src/runtime/dna/lib/include/public/dna/runtime/fx/system/net/: System.Net.Dns.h  System.Net.Sockets.Socket.h
src/runtime/libgraph/: CMakeLists.txt
src/runtime/libgraph/impl/: Bitmap.c  BitmapLoader.c  Brush.c  DrawEllipses.c  DrawLines.c  DrawRectangles.c  Exports.c  Font.c  FontFamily.c  GetScreen.c  Graphics.c  Image.c  Pen.c  Pixels.c  Region.c  StringFormat.c  Text.c  jidctflt.c  libIGraph.c  tinyjpeg.c
src/runtime/libgraph/include/public/dna/libgraph/: Bitmap.h  Brush.h  Config.h  DrawEllipses.h  DrawLines.h  DrawRectangles.h  Font.h  FontFamily.h  GetScreen.h  Graphics.h  HatchBrushDefs.h  Image.h  Pen.h  Pixels.h  Region.h  StringFormat.h  Text.h  libIGraph.h  tinyjpeg-internal.h  tinyjpeg.h
utilities/: bootstrap.sh  install-dotnet.sh
